--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,14 @@
     --box-shadow: 0px 5px 20px 0px rgba(69,67,96,0.1);
     
 }
+::-webkit-scrollbar{
+    width: 0.6rem;
+    background: var(--color-white);
+}
+::-webkit-scrollbar-thumb{
+    background: var(--color-primary);
+    border-radius: 0.5rem;
+}
 @media screen and (max-width:992px){
     :root{
         --h1-font-size:1.75rem;
@@ -128,7 +136,7 @@ h3{
 }
 
 .section .container{
-    padding-top: 3.75rem;
+    padding-top: 3.90rem;
     padding-bottom: 4.75rem;
 }
 .section-title{
@@ -558,6 +566,25 @@ h3{
     max-width: 33.33%;
     margin-bottom: var(--m-1-5);
 }  
+.portfolio-item.hide{
+    display: none;
+}
+.portfolio-item.show{
+    display: block;
+    animation: showItem 0.5s ease;
+}
+@keyframes showItem {
+    0%{
+        transform: scale(0.6);
+        opacity: 0;
+
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+
+    }
+}
 .portfolio-item-inner{
     position: relative;
     overflow: hidden;
@@ -820,7 +847,7 @@ h3{
 }
 
 .footer{
-    padding: 60px 0;;
+    padding: 40px 0;;
 }
 .footer-text{
     text-align: center;
